[gd_scene load_steps=8 format=3 uid="uid://cck2l66u4hsma"]

[ext_resource type="Script" uid="uid://j6spx4n6400g" path="res://Scene/Menu/settings.gd" id="1_0t264"]
[ext_resource type="Texture2D" uid="uid://cm4hnucrrxlp7" path="res://Assets/UI/Menu/Level Select/table.png" id="1_r4i55"]
[ext_resource type="Texture2D" uid="uid://cmcqoxpu2w3xh" path="res://Assets/UI/Menu/Level Select/rope_small.png" id="2_0upel"]
[ext_resource type="Texture2D" uid="uid://bby3asmxwfve1" path="res://Assets/UI/Menu/Settings/button_restart.png" id="4_bj6dl"]
[ext_resource type="Texture2D" uid="uid://drkvt5x3vkflo" path="res://Assets/UI/Menu/Level Select/button_left.png" id="4_igyhi"]
[ext_resource type="Texture2D" uid="uid://c6rjoi4bqontf" path="res://Assets/UI/Menu/Level Select/button_close.png" id="9_notcq"]
[ext_resource type="Texture2D" uid="uid://b2cbyo26louk2" path="res://Assets/UI/Menu/Settings/button_pause.png" id="18_68b2d"]

[node name="Settings" type="Node2D"]
script = ExtResource("1_0t264")

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="DarkOverlay" type="ColorRect" parent="CanvasLayer2"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -125.0
offset_right = 88.0
offset_bottom = 138.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.6)

[node name="SettingPanel" type="TextureRect" parent="CanvasLayer2"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -188.0
offset_top = -157.0
offset_right = 189.0
offset_bottom = 111.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("1_r4i55")
expand_mode = 1

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer2/SettingPanel"]
layout_mode = 0
offset_left = 98.0
offset_top = -258.0
offset_right = 125.0
offset_bottom = 57.0
texture = ExtResource("2_0upel")
expand_mode = 4
stretch_mode = 1

[node name="TextureRect5" type="TextureRect" parent="CanvasLayer2/SettingPanel"]
layout_mode = 0
offset_left = 99.0
offset_top = -379.0
offset_right = 126.0
offset_bottom = -103.0
texture = ExtResource("2_0upel")
expand_mode = 4
stretch_mode = 1

[node name="TextureRect6" type="TextureRect" parent="CanvasLayer2/SettingPanel"]
layout_mode = 0
offset_left = 99.0
offset_top = -467.0
offset_right = 126.0
offset_bottom = -191.0
texture = ExtResource("2_0upel")
expand_mode = 4
stretch_mode = 1

[node name="TextureRect7" type="TextureRect" parent="CanvasLayer2/SettingPanel"]
layout_mode = 0
offset_left = 246.5
offset_top = -366.5
offset_right = 273.5
offset_bottom = -90.5
texture = ExtResource("2_0upel")
expand_mode = 4
stretch_mode = 1

[node name="TextureRect8" type="TextureRect" parent="CanvasLayer2/SettingPanel"]
layout_mode = 0
offset_left = 246.5
offset_top = -454.5
offset_right = 273.5
offset_bottom = -178.5
texture = ExtResource("2_0upel")
expand_mode = 4
stretch_mode = 1

[node name="TextureRect9" type="TextureRect" parent="CanvasLayer2/SettingPanel"]
layout_mode = 0
offset_left = 99.0
offset_top = -581.0
offset_right = 126.0
offset_bottom = -305.0
texture = ExtResource("2_0upel")
expand_mode = 4
stretch_mode = 1

[node name="TextureRect10" type="TextureRect" parent="CanvasLayer2/SettingPanel"]
layout_mode = 0
offset_left = 99.0
offset_top = -669.0
offset_right = 126.0
offset_bottom = -393.0
texture = ExtResource("2_0upel")
expand_mode = 4
stretch_mode = 1

[node name="TextureRect11" type="TextureRect" parent="CanvasLayer2/SettingPanel"]
layout_mode = 0
offset_left = 246.5
offset_top = -568.5
offset_right = 273.5
offset_bottom = -292.5
texture = ExtResource("2_0upel")
expand_mode = 4
stretch_mode = 1

[node name="TextureRect12" type="TextureRect" parent="CanvasLayer2/SettingPanel"]
layout_mode = 0
offset_left = 246.5
offset_top = -656.5
offset_right = 273.5
offset_bottom = -380.5
texture = ExtResource("2_0upel")
expand_mode = 4
stretch_mode = 1

[node name="TextureRect13" type="TextureRect" parent="CanvasLayer2/SettingPanel"]
layout_mode = 0
offset_left = 98.0
offset_top = -712.0
offset_right = 125.0
offset_bottom = -436.0
texture = ExtResource("2_0upel")
expand_mode = 4
stretch_mode = 1

[node name="TextureRect14" type="TextureRect" parent="CanvasLayer2/SettingPanel"]
layout_mode = 0
offset_left = 98.0
offset_top = -800.0
offset_right = 125.0
offset_bottom = -524.0
texture = ExtResource("2_0upel")
expand_mode = 4
stretch_mode = 1

[node name="TextureRect15" type="TextureRect" parent="CanvasLayer2/SettingPanel"]
layout_mode = 0
offset_left = 245.5
offset_top = -699.5
offset_right = 272.5
offset_bottom = -423.5
texture = ExtResource("2_0upel")
expand_mode = 4
stretch_mode = 1

[node name="TextureRect16" type="TextureRect" parent="CanvasLayer2/SettingPanel"]
layout_mode = 0
offset_left = 245.5
offset_top = -787.5
offset_right = 272.5
offset_bottom = -511.5
texture = ExtResource("2_0upel")
expand_mode = 4
stretch_mode = 1

[node name="TextureRect17" type="TextureRect" parent="CanvasLayer2/SettingPanel"]
layout_mode = 0
offset_left = 98.0
offset_top = -822.0
offset_right = 125.0
offset_bottom = -546.0
texture = ExtResource("2_0upel")
expand_mode = 4
stretch_mode = 1

[node name="TextureRect18" type="TextureRect" parent="CanvasLayer2/SettingPanel"]
layout_mode = 0
offset_left = 98.0
offset_top = -910.0
offset_right = 125.0
offset_bottom = -634.0
texture = ExtResource("2_0upel")
expand_mode = 4
stretch_mode = 1

[node name="TextureRect19" type="TextureRect" parent="CanvasLayer2/SettingPanel"]
layout_mode = 0
offset_left = 245.5
offset_top = -809.5
offset_right = 272.5
offset_bottom = -533.5
texture = ExtResource("2_0upel")
expand_mode = 4
stretch_mode = 1

[node name="TextureRect20" type="TextureRect" parent="CanvasLayer2/SettingPanel"]
layout_mode = 0
offset_left = 245.5
offset_top = -897.5
offset_right = 272.5
offset_bottom = -621.5
texture = ExtResource("2_0upel")
expand_mode = 4
stretch_mode = 1

[node name="TextureRect3" type="TextureRect" parent="CanvasLayer2/SettingPanel"]
layout_mode = 0
offset_left = 247.5
offset_top = -256.5
offset_right = 274.5
offset_bottom = 58.5
texture = ExtResource("2_0upel")
expand_mode = 4
stretch_mode = 1

[node name="BackButton" type="TextureButton" parent="CanvasLayer2/SettingPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -118.5
offset_top = -30.0
offset_right = -24.5
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("4_igyhi")
ignore_texture_size = true
stretch_mode = 0

[node name="CloseButton" type="TextureButton" parent="CanvasLayer2/SettingPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 134.5
offset_top = -157.0
offset_right = 206.5
offset_bottom = -85.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("9_notcq")
ignore_texture_size = true
stretch_mode = 0

[node name="RestartButton" type="TextureButton" parent="CanvasLayer2/SettingPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 22.5
offset_top = -30.0
offset_right = 116.5
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("4_bj6dl")
ignore_texture_size = true
stretch_mode = 0

[node name="SettingsButton" type="TextureButton" parent="CanvasLayer2"]
offset_left = 1067.0
offset_top = 27.0
offset_right = 1128.0
offset_bottom = 87.0
texture_normal = ExtResource("18_68b2d")
ignore_texture_size = true
stretch_mode = 0

[connection signal="pressed" from="CanvasLayer2/SettingPanel/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="CanvasLayer2/SettingPanel/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="CanvasLayer2/SettingPanel/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="CanvasLayer2/SettingsButton" to="." method="_on_settings_button_pressed"]
